# webdav-client-cpp

./: .appveyor.yml  .astylerc  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  BUGS.md  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  INSTALL.UNIX.md  INSTALL.WIN  INSTALL.WIN.md  INSTALL.macOS.md  INSTALL.md  INSTALL.unix.md  LICENSE  MANIFEST  MANIFEST.md  NEWS  README.md  REQUIREMENTS.UNIX.txt  REQUIREMENTS.txt  TODO.md  annotated.html  appveyor.yml  classWebDAV_1_1Client-members.html  classWebDAV_1_1Client.html  classes.html  client_8hpp_source.html  dir_c77317895cee17606a7e258552e301bf.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html  requirements.txt
client/: CMakeLists.txt  doxygen.conf
client/doc/: header.html
client/docs/: doxygen.conf
client/examples/: check.cpp  clean.cpp  client.cpp  download.cpp  init.cpp  list.cpp  size.cpp  upload.cpp
client/inc/: client.hpp
client/inc/openssl/: asn1.h  bio.h  dtls1.h  opensslconf.h  opensslv.h  ssl.h
client/inc/pugixml/: pugixml.hpp
client/src/: callback.cpp  callback.hpp  client.cpp  client.hpp  fsinfo.cpp  fsinfo.hpp  pugiext.hpp  request.cpp  request.hpp  stdafx.cpp  stdafx.h  urn.cpp  urn.hpp
client/tests/: CMakeLists.txt  catch.hpp  check.cpp  clean.cpp  config.hpp  list.cpp  main.cpp  stdafx.cpp  stdafx.h
cmake/: CodeCoverage.cmake  Config.cmake.in  FindCPM.cmake  FindPugiXML.cmake  Package.cmake.in  ProjectConfig-include.cmake.in
cmake/Hunter/: config.cmake
docs/: doxygen.conf  footer.html
examples/: copy.cpp  mkdir.cpp  upload.cpp
examples/cli/: cli.cpp
examples/client/: check.cpp  clean.cpp  copy.cpp  download.cpp  info.cpp  init.cpp  list.cpp  mkdir.cpp  move.cpp  remove.cpp  size.cpp  upload.cpp
include/: client.hpp
include/webdav/: client.hpp
scripts/: wdc.pc.in  webdavclient.pc.in
search/: all_1.js  all_5.js  all_7.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  pages_0.js  searchdata.js
source/: callback.cpp  callback.hpp  client.cpp  fsinfo.cpp  fsinfo.hpp  header.cpp  header.hpp  pugiext.hpp  request.cpp  request.hpp  stdafx.h  urn.cpp  urn.hpp
sources/: callback.cpp  callback.hpp  client.cpp  fsinfo.cpp  fsinfo.hpp  header.cpp  header.hpp  pugiext.hpp  request.cpp  request.hpp  stdafx.cpp  stdafx.h  urn.cpp  urn.hpp
tests/: CMakeLists.txt  catch.hpp  check.cpp  clean.cpp  config.hpp  download.cpp  fixture.cpp  fixture.hpp  list.cpp  main.cpp  stdafx.cpp  stdafx.h  upload.cpp
tests/client/: check.cpp  clean.cpp  config.hpp  list.cpp  main.cpp  stdafx.h
tests/cmake/: FindCPM.cmake  FindStaticOpenSSL.cmake
tests/source/: catch.hpp  check.cpp  clean.cpp  config.hpp  download.cpp  list.cpp  main.cpp  stdafx.h
tools/: build_package.deb.sh  build_package.rpm.sh  build_requirements.cygwin.sh  build_requirements.unix.sh  build_requirements.win.bat  build_requirements.win.sh
tools/polly/: ios-10-3-dep-8-0-bitcode.cmake
